--- a/url/BioVitalAgeClock/BioVitalAgeClock.html
+++ b/url/BioVitalAgeClock/BioVitalAgeClock.html
@@ -627,11 +627,9 @@
 
         <footer>
             <div class="footer-header-container">
+
                 <div class="footer-header">
-
-
-                    <div class="col-12 col-md-3 p-md-2 widget-logo">
-
+                    <div class="col-12 col-md-3 p-md-2 col-lg-2  widget-logo">
 
                         <div class="col-md-12 logo-container">
                             <img src="../../includes/images/Logo.png" alt="">
@@ -660,7 +658,7 @@
                     </div>
 
 
-                    <div class="col-12 col-md-2 p-2 widget-link">
+                    <div class="col-12 col-md-3 p-2 col-lg-2  widget-link">
                         <h3>Products</h3>
                         <ul>
                             <li><a href="">Home</a></li>
@@ -673,7 +671,7 @@
                     </div>
 
 
-                    <div class="col-12 col-md-2 p-2 widget-link">
+                    <div class="col-12 col-md-3 p-2 col-lg-2  widget-link" id="adjust-tablet">
                         <h3>Link Utili</h3>
                         <ul>
                             <li><a href="">Area Accesso</a></li>
@@ -685,7 +683,7 @@
                     </div>
 
 
-                    <div class="col-12 col-md-2 p-2 widget-contatti">
+                    <div class="col-12 col-md-3 col-lg-2 p-2 widget-contatti">
                         <h3>Contattaci</h3>
                         <ul>
                             <li><img src="../../includes/images/icone/email.png" alt="" width="30px" height="30px"><p>info@gmail.com</p></li>
