--- a/url/Innovation/innovation.html
+++ b/url/Innovation/innovation.html
@@ -98,7 +98,7 @@
             </div>
         </div>
 
-        <div class="col-12 col-md-10 tittle-news">
+        <div class="col-12 col-md-12 col-lg-10 tittle-news">
             <h3>Latest News</h3>
             <select name="filtri">
                 <option value="1">Tutti i blog</option>
@@ -109,13 +109,13 @@
             </select>
         </div>
 
-        <div class="col-12 col-md-10 d-flex justify-content-center align-items-center ultime-notizie-container">
+        <div class="col-12 col-md-12 col-lg-10 d-flex justify-content-center align-items-center ultime-notizie-container">
  
             <div class="col-md-4 card-notizie" id="first">
                 <div class="card-image">
                     <img class="scale-img" src="https://img.freepik.com/fotos-premium/computadora-portatil-fondo-azul-fondo-azul-nube-palabras_862543-164.jpg" alt="">
                 </div>
-                <div class="card-descrizione p-3 p-md-5">
+                <div class="card-descrizione p-3 p-lg-5">
                     <div class="autore-description d-flex justify-content-between align-items-center">
                         <div class="Container-autore d-flex" style="gap:5px">
                             <img src="../../includes/images/icone/autore.png" alt="" width="20px" height="20px">
@@ -136,7 +136,7 @@
                 <div class="card-image">
                     <img class="scale-img" src="https://img.freepik.com/fotos-premium/computadora-portatil-fondo-azul-fondo-azul-nube-palabras_862543-164.jpg" alt="">
                 </div>
-                <div class="card-descrizione p-3 p-md-5">
+                <div class="card-descrizione p-3 p-lg-5">
                     <div class="autore-description d-flex justify-content-between align-items-center">
                         <div class="Container-autore d-flex" style="gap:5px">
                             <img src="../../includes/images/icone/autore.png" alt="" width="20px" height="20px">
@@ -157,7 +157,7 @@
                 <div class="card-image">
                     <img class="scale-img" src="https://img.freepik.com/fotos-premium/computadora-portatil-fondo-azul-fondo-azul-nube-palabras_862543-164.jpg" alt="">
                 </div>
-                <div class="card-descrizione p-3 p-md-5">
+                <div class="card-descrizione p-3 p-lg-5">
                     <div class="autore-description d-flex justify-content-between align-items-center">
                         <div class="Container-autore d-flex" style="gap:5px">
                             <img src="../../includes/images/icone/autore.png" alt="" width="20px" height="20px">
@@ -175,13 +175,13 @@
             </div>
         </div>
 
-        <div class="col-12 col-md-10 d-flex justify-content-center align-items-center ultime-notizie-container">
+        <div class="col-12 col-md-12 col-lg-10 d-flex justify-content-center align-items-center ultime-notizie-container">
  
             <div class="col-md-4 card-notizie" id="first">
                 <div class="card-image">
                     <img class="scale-img" src="https://img.freepik.com/fotos-premium/computadora-portatil-fondo-azul-fondo-azul-nube-palabras_862543-164.jpg" alt="">
                 </div>
-                <div class="card-descrizione  p-3 p-md-5">
+                <div class="card-descrizione p-3 p-lg-5">
                     <div class="autore-description d-flex justify-content-between align-items-center">
                         <div class="Container-autore d-flex" style="gap:5px">
                             <img src="../../includes/images/icone/autore.png" alt="" width="20px" height="20px">
@@ -202,7 +202,7 @@
                 <div class="card-image">
                     <img class="scale-img" src="https://img.freepik.com/fotos-premium/computadora-portatil-fondo-azul-fondo-azul-nube-palabras_862543-164.jpg" alt="">
                 </div>
-                <div class="card-descrizione p-3 p-md-5">
+                <div class="card-descrizione p-3 p-lg-5">
                     <div class="autore-description d-flex justify-content-between align-items-center">
                         <div class="Container-autore d-flex" style="gap:5px">
                             <img src="../../includes/images/icone/autore.png" alt="" width="20px" height="20px">
@@ -223,7 +223,7 @@
                 <div class="card-image">
                     <img class="scale-img" src="https://img.freepik.com/fotos-premium/computadora-portatil-fondo-azul-fondo-azul-nube-palabras_862543-164.jpg" alt="">
                 </div>
-                <div class="card-descrizione p-3 p-md-5">
+                <div class="card-descrizione p-3 p-lg-5">
                     <div class="autore-description d-flex justify-content-between align-items-center">
                         <div class="Container-autore d-flex" style="gap:5px">
                             <img src="../../includes/images/icone/autore.png" alt="" width="20px" height="20px">
@@ -249,11 +249,11 @@
 
 
 
-        <div class="col-12 col-md-10 tittle-news-two">
+        <div class="col-12 col-md-12 col-lg-10 tittle-news-two">
             <h3>Latest Platform Update</h3>
         </div>
 
-        <div class="col-12 col-md-10 p-3 p-md-5 d-flex justify-content-center align-items-center Aggiornamenti">
+        <div class="col-12 col-md-12 col-lg-10 p-3 p-md-5 d-flex justify-content-center align-items-center Aggiornamenti">
 
             <div class="p-3 p-md-5 d-flex-column justify-content-center align-items-center card-etaBiologica">
                 <div class="img-container-etaBiologica">
