contatti, industries, corporation mediaquery tablet 100% done, fixed some adjust for tablet dimension

--- a/url/contattaci/contattaci.html
+++ b/url/contattaci/contattaci.html
@@ -78,8 +78,8 @@
             <h3>Contact</h3>
         </div>  
 
-        <div class="col-md-12 p-md-5 d-flex justify-content-center align-items-center home-content-demo" style="margin-bottom: 1.5rem;">
-            <div class="col-12 col-md-5 p-md-5 demo-descrizione">
+        <div class="col-md-12 p--5 d-flex justify-content-center align-items-center home-content-demo" style="margin-bottom: 1.5rem;">
+            <div class="col-12 col-md-6 col-lg-5 p-md-5 demo-descrizione">
                 <h5>Contact Information</h5>
                 <h3>Get in touch with us today</h3>
                 <p class="col-11 col-md-11">
@@ -123,7 +123,7 @@
                 </div>
             </div>
 
-            <div class="col-12 col-md-5 p-3 p-md-5 form-richiedi">
+            <div class="col-12 col-md-6 col-lg-5 p-3 p-md-5 form-richiedi">
                 <h5>Get in Touch</h5>
                 <h3 class="col-md-12">Inviaci un Messaggio</h3>
                 <p>Compilare il form ed inviaci un messaggio, risponderemo più velocemente possibile.</p>
@@ -279,7 +279,7 @@
 
         <div class="col-md-12 container-demo">
             <div class="backdrop"></div>
-            <div class="col-12 col-md-4 description-demo">
+            <div class="col-12 col-md-8 col-lg-4 description-demo">
                 <h3>Area di accesso alla demo</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae libero ducimus aperiam fuga omnis a excepturi deserunt velit animi incidunt quae blanditiis doloribus ipsa ratione saepe quis, molestias ullam inventore!</p>
                 <button class="button-style">Accedi</button>
