mediaquery laptop 100% done, start with desktop mediaquery

--- a/url/Innovation/innovation.html
+++ b/url/Innovation/innovation.html
@@ -98,7 +98,7 @@
             </div>
         </div>
 
-        <div class="col-12 col-md-12 col-lg-10 tittle-news">
+        <div class="col-12 col-md-12 col-xxl-10 tittle-news">
             <h3>Latest News</h3>
             <select name="filtri">
                 <option value="1">Tutti i blog</option>
@@ -109,7 +109,7 @@
             </select>
         </div>
 
-        <div class="col-12 col-md-12 col-lg-10 d-flex justify-content-center align-items-center ultime-notizie-container">
+        <div class="col-12 col-md-12 col-xxl-10 d-flex justify-content-center align-items-center ultime-notizie-container">
  
             <div class="col-md-4 card-notizie" id="first">
                 <div class="card-image">
@@ -175,7 +175,7 @@
             </div>
         </div>
 
-        <div class="col-12 col-md-12 col-lg-10 d-flex justify-content-center align-items-center ultime-notizie-container">
+        <div class="col-12 col-md-12 col-xxl-10 d-flex justify-content-center align-items-center ultime-notizie-container">
  
             <div class="col-md-4 card-notizie" id="first">
                 <div class="card-image">
@@ -249,11 +249,11 @@
 
 
 
-        <div class="col-12 col-md-12 col-lg-10 tittle-news-two">
+        <div class="col-12 col-md-12 col-xxl-10 tittle-news-two">
             <h3>Latest Platform Update</h3>
         </div>
 
-        <div class="col-12 col-md-12 col-lg-10 p-3 p-md-5 d-flex justify-content-center align-items-center Aggiornamenti">
+        <div class="col-12 col-md-12 col-xxl-10 p-3 p-md-5 d-flex justify-content-center align-items-center Aggiornamenti">
 
             <div class="p-3 p-md-5 d-flex-column justify-content-center align-items-center card-etaBiologica">
                 <div class="img-container-etaBiologica">
@@ -339,7 +339,7 @@
 
                         <p class="col-md-12">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
 
-                        <div class="col-md-10 p-2 social-container d-flex">
+                        <div class="col-md-10 col-lg-12 col-xxl-10 p-2 social-container d-flex">
                         
                                 <div class="col-md-2 p-1 facebook">
                                     <a href="#"><img src="../../includes/images/icone/facebook.png" alt="" ></a>
@@ -360,7 +360,7 @@
                     </div>
 
 
-                    <div class="col-12 col-md-3 p-2 col-lg-2  widget-link">
+                    <div class="col-12 col-md-3 p-2 col-lg-3 col-xxl-2  widget-link">
                         <h3>Products</h3>
                         <ul>
                             <li><a href="">Home</a></li>
@@ -373,7 +373,7 @@
                     </div>
 
 
-                    <div class="col-12 col-md-3 p-2 col-lg-2  widget-link" id="adjust-tablet">
+                    <div class="col-12 col-md-3 p-2 col-lg-3 col-xxl-2  widget-link" id="adjust-tablet">
                         <h3>Link Utili</h3>
                         <ul>
                             <li><a href="">Area Accesso</a></li>
@@ -385,7 +385,7 @@
                     </div>
 
 
-                    <div class="col-12 col-md-3 col-lg-2 p-2 widget-contatti">
+                    <div class="col-12 col-md-3 col-lg-3 col-xxl-2 p-2 widget-contatti">
                         <h3>Contattaci</h3>
                         <ul>
                             <li><img src="../../includes/images/icone/email.png" alt="" width="30px" height="30px"><p>info@gmail.com</p></li>
