--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     </h3>
     
                     <p class="col-md-12 p-4">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Ciao Miriana ora imparerai a scrivere ipsum dolor sit amet consectetur adipisicing elit. 
                         Assumenda animi quae explicabo ex inventore asperiores,
                          nobis labore itaque sunt neque dicta,
                         dolorum, doloribus ipsa nemo vitae dolorem 
