--- a/url/BioVitalAgeClock/BioVitalAgeClock.html
+++ b/url/BioVitalAgeClock/BioVitalAgeClock.html
@@ -110,14 +110,12 @@
                         </div>
                         <p>
                             <span>L'età biologica</span>
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                            Omnis quaerat officia ipsa id quae reiciendis ducimus quos possimus dolorum
-                            amet soluta tempora quasi nam delectus necessitatibus,
-                            impedit voluptatum in ratione.
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                            Omnis quaerat officia ipsa id quae reiciendis ducimus quos possimus dolorum
-                            amet soluta tempora quasi nam delectus necessitatibus,
-                            impedit voluptatum in ratione.
+                           Per età biologica si intende l'età di un individuo definita dal livello di cambiamenti biologici
+                           dipendenti dall'età, come l'accumulo di danni molecolari e cellulari. Essa dipende dall'intensità dei
+                           processi di invecchiamento e può essere influenzata dalla genetica, dalle scelte di vita e
+                           dall'ambiente. L’età biologica viene riconosciuta sempre più frequentemente come un parametro
+                           più affidabile rispetto all’età cronologica (l’età di un individuo calcolata sulla base del tempo
+                           trascorso dalla nascita) per determinare l’evoluzione clinica.
                         </p>
                     </div>
 
