link piattaforma test

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         
         <div class="nav-bar__other-link">
             <a href="url/contattaci/contattaci.html" class="info-link">Contattaci<img src="includes/images/navBarArrow.png" alt=""></a>
-            <button href="BioVitalAgePlatformDeployed-env.eba-exhbgdpt.us-east-1.elasticbeanstalk.com" class="button-style accedi">Accedi</button>
+            <button href="http://biovitalageplatformdeployed-env.eba-exhbgdpt.us-east-1.elasticbeanstalk.com/" class="button-style accedi">Accedi</button>
         </div>
     </nav>
 
