aggiunto link alla piattaforma

--- a/url/BioVitalAgeTherapy/BioVitalAgeTeraphy.html
+++ b/url/BioVitalAgeTherapy/BioVitalAgeTeraphy.html
@@ -63,7 +63,7 @@
         </div>
         <div class="nav-bar__other-link">
             <a href="../../url/contattaci/contattaci.html" class="info-link">Contattaci<img src="../../includes/images/navBarArrow.png" alt=""></a>
-            <button href="#" class="button-style accedi">Accedi</button>
+            <a href="http://biovitalageplatformdeployed-env.eba-exhbgdpt.us-east-1.elasticbeanstalk.com/" class="button-style accedi" style="text-align: center; padding-top: 6px;">Accedi</a>
         </div>
     </nav>
 
