--- a/url/contattaci/contattaci.html
+++ b/url/contattaci/contattaci.html
@@ -67,7 +67,7 @@
         </div>
         <div class="nav-bar__other-link">
             <a href="contattaci.html" class="info-link">Contattaci<img src="../../includes/images/navBarArrow.png" alt=""></a>
-            <button href="#" class="button-style accedi">Accedi</button>
+            <a href="http://biovitalageplatformdeployed-env.eba-exhbgdpt.us-east-1.elasticbeanstalk.com/" class="button-style accedi" style="text-align: center; padding-top: 6px;">Accedi</a>
         </div>
     </nav>
 
@@ -282,7 +282,7 @@
             <div class="col-12 col-md-8 col-lg-8 col-xxl-4 description-demo">
                 <h3>Area di accesso alla demo</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae libero ducimus aperiam fuga omnis a excepturi deserunt velit animi incidunt quae blanditiis doloribus ipsa ratione saepe quis, molestias ullam inventore!</p>
-                <button class="button-style">Accedi</button>
+                <a href="http://biovitalageplatformdeployed-env.eba-exhbgdpt.us-east-1.elasticbeanstalk.com/" class="button-style accedi" style="text-align: center; padding-top: 6px; text-decoration: none;">Accedi</a>
             </div>
         </div>
 
