--- a/index.html
+++ b/index.html
@@ -133,10 +133,9 @@
                     <h3>BioVitalAge, il Software <span>Ideale</span> per te</h3>
     
                     <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                         Omnis quaerat officia ipsa id quae reiciendis ducimus quos possimus dolorum
-                        amet soluta tempora quasi nam delectus necessitatibus,
-                         impedit voluptatum in ratione.
+                       Lo scopo della piattaforma è quello di fornire un’indicazione non solo sull’età biologica del paziente, ma anche del suo stato di salute generale.
+                        Inoltre, il sistema AI andrà ad identificare le criticità della salute del
+                        paziente fornendo consigli su come intervenire.
                     </p>
                     <p>
                         Lorem ipsum dolor sit, amet consectetur adipisicing elit.
