--- a/index.html
+++ b/index.html
@@ -106,12 +106,7 @@
                         BioVitalAgeClock è una piattaforma che elabora, mediante Intelligenza Artificiale (AI), i
                         biomarcatori di laboratorio e fisiologici (sia strumentali che relativi a caratteristiche fisiche), che
                         emergono dalla Letteratura Scientifica come potenzialmente associati all’invecchiamento e quindi
-                        anche alla perdita della capacità vitale e della resilienza biologica. Lo scopo è quello di fornire
-                        un’indicazione non solo sull’età biologica del paziente, ma anche del suo stato di salute generale.
-                        Inoltre, si prevede di addestrare il sistema AI ad identificare sia le aree critiche della salute del
-                        paziente sia quelle che, pur non presentando criticità, devono essere potenziate. BioVitalAge Clock
-                        identificherà anche fattori ambientali/comportamentali sia di rischio che protettivi per un sano
-                        invecchiamento.
+                        anche alla perdita della capacità vitale e della resilienza biologica.
                     </p>
                 
                 </div>
@@ -138,10 +133,7 @@
                         paziente fornendo consigli su come intervenire.
                     </p>
                     <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                         Omnis quaerat officia ipsa id quae reiciendis ducimus quos possimus dolorum
-                        amet soluta tempora quasi nam delectus necessitatibus,
-                         impedit voluptatum in ratione.
+                      
                     </p>
                     <button class="button-style" onclick="window.location = 'url/BioVitalAgeClock/BioVitalAgeClock.html';">Scopri di più</button>
                 </div>
